<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_background_rounded"
    android:padding="12dp"
    >

    <TextView
        android:id="@+id/window_title"
        style="@style/FancyTextsNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/edit"
        android:textSize="18sp"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exit"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/ic_add_circle"
        android:elevation="3dp"
        android:enabled="true"
        android:focusable="true"
        android:rotation="45"
        app:layout_constraintBottom_toBottomOf="@id/window_title"
        app:layout_constraintEnd_toEndOf="@id/liquid_record_item_quantity"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/window_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        />

    <EditText
        android:id="@+id/liquid_record_item_liquid"
        style="@style/FancyEditable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="@string/itemview_liquidname"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/itemview_liquidname"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/liquid_record_item_quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/window_title"
        app:layout_constraintVertical_bias="0.015"
        />

    <EditText
        android:id="@+id/liquid_record_item_quantity"
        style="@style/FancyEditable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/itemview_quantityformat"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:text="@string/itemview_quantityformat"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/liquid_record_item_liquid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/liquid_record_item_liquid"
        app:layout_constraintTop_toTopOf="@id/liquid_record_item_liquid"
        />

    <EditText
        android:id="@+id/liquid_record_item_datetime"
        style="@style/FancyEditable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:hint="@string/itemview_dateformat"
        android:importantForAutofill="no"
        android:inputType="datetime"
        android:text="@string/itemview_dateformat"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/liquid_record_item_liquid"
        app:layout_constraintTop_toBottomOf="@id/liquid_record_item_liquid"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/record_popup_delete"
        style="@style/FancyButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:text="@string/delete"
        app:layout_constraintEnd_toStartOf="@id/record_popup_save"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/liquid_record_item_datetime"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/record_popup_save"
        style="@style/FancyButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:enabled="false"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="@+id/record_popup_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/record_popup_delete"
        app:layout_constraintTop_toTopOf="@+id/record_popup_delete"
        />

</androidx.constraintlayout.widget.ConstraintLayout>